force-app/main/default/objects/Login_Verification__c/Login_Verification__c.object-meta.xml
<CustomObject>
    <description>Temporary storage for login verification codes.</description>
    <label>Login Verification</label>
    <pluralLabel>Login Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Verification Name</label>
        <type>AutoNumber</type>
        <displayFormat>LV-{0000}</displayFormat>
    </nameField>
</CustomObject>