force-app/main/default/objects/Login_Verification__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>6-digit verification code for login.</description>
    <label>Verification Code</label>
    <length>6</length>
    <type>Text</type>
    <required>true</required>
</CustomField>