force-app/main/default/objects/Login_Verification__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email used for verification login requests.</description>
    <label>Email</label>
    <type>Email</type>
    <required>true</required>
</CustomField>